src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ClosedProfile</fullName>
        <description>Sales process that will be used by &apos;closed&apos; CARE Profiles</description>
        <isActive>true</isActive>
        <values>
            <fullName>Applicant</fullName>
        </values>
        <values>
            <fullName>Dis-positioned</fullName>
        </values>
        <values>
            <fullName>Intake</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Continuing Grad</fullName>
        <description>Sales processes for Continuing Graduates</description>
        <isActive>true</isActive>
        <values>
            <fullName>Applicant</fullName>
        </values>
        <values>
            <fullName>Dis-positioned</fullName>
        </values>
        <values>
            <fullName>Intake</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Intake</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Applicant</fullName>
        </values>
        <values>
            <fullName>Dis-positioned</fullName>
        </values>
        <values>
            <fullName>Intake</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prospect</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Applicant</fullName>
        </values>
        <values>
            <fullName>Dis-positioned</fullName>
        </values>
        <values>
            <fullName>Intake</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADMTPush__c</fullName>
        <label>ADMTPush</label>
        <summaryFilterItems>
            <field>Admission__c.ADMTReady__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Admission__c.AdmissionReview__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcademicSkillsPercent__c</fullName>
        <description>Readiness Assessment Academic Skills percentage pass</description>
        <label>Academic Skills Percent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcademicSkillsPoints__c</fullName>
        <description>Readiness Assessment - Academic Skills Points</description>
        <label>Academic Skills Points</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accreditation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accreditation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddBackToRole__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Adds the prospect back to the EWB Role</description>
        <label>AddBackToRole</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdmissionsCase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Account.Id&amp;&quot;&amp;def_contact_id=&quot;&amp;StudentContact__r.Id&amp;&quot;&amp;RecordType=012a0000001ZOGh&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a000000235vV&quot;, &quot;Create A Case&quot;) , &quot;Admissions Case&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admissions Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffiliateCode__c</fullName>
        <label>Affiliate Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appealed_Transcript_Count__c</fullName>
        <description>Number of transcripts that are currently being appealed and awaiting decision</description>
        <inlineHelpText>Number of transcripts that are currently being appealed and awaiting decision</inlineHelpText>
        <label>Appealed Transcript Count</label>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptStatus__c</field>
            <operation>equals</operation>
            <value>Appealed</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentTranscript__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ApplicationComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The application is completed</description>
        <label>Application Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationFeeAmount__c</fullName>
        <label>Application Fee Amount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationFeeConfirmation__c</fullName>
        <description>The confirmation of the application fee being paid.</description>
        <label>Application Fee Confirmation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ApplicationFeePaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows weather the application fee has been paid or not.</description>
        <label>Application Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationPaidDate__c</fullName>
        <description>Date the application fee was paid</description>
        <label>Application Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApplicationPin__c</fullName>
        <description>This is a pin that is created by the student while creating the application, used later to claim their log in</description>
        <label>Application Pin</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssessmentTypes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Types - Pass/not pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttendedCollegeBeforeWGU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From the application form</description>
        <label>Attended College Before WGU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BachelorsDegree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From the application Form</description>
        <label>Bachelors Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BadLeadReason__c</fullName>
        <label>Bad Lead Reason</label>
        <picklist>
            <controllingField>GoodBadLead__c</controllingField>
            <picklistValues>
                <fullName>Bad Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Phone Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad address and email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad address and phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad phone and email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad phone and name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not request info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BannerRepush__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to request the system to attempt another push to the Banner system. This should be done after the original problem has been evaluated and data corrected. Do not just re-push without handling original issue.</inlineHelpText>
        <label>Request Re-Push to Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerSynchronizationError__c</fullName>
        <description>A field to synchronize back from the Oracle database to track status of Banner synchronization with the intake process to the university.</description>
        <inlineHelpText>If a value exists, then there was an issue with synchronizing data to the Banner system. Please file a ticket with the help desk.</inlineHelpText>
        <label>Banner Synchronization Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BursarCase__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;def_account_id=&quot;&amp;Account.Id&amp;&quot;&amp;def_contact_id=&quot;&amp;StudentContact__r.Id&amp;&quot;&amp;RecordType=012a0000001ZRnr&amp;ent=Case&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Df0000002MhY1&amp;id=015a000000235vQ&quot;, &quot;Create A Case&quot;) , &quot;Bursar Case&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bursar Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BursarStatus__c</fullName>
        <label>Financial Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAREStatusListView__c</fullName>
        <formula>LEFT(TEXT(CareStatus__c), 4)</formula>
        <label>CARE Status List View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <formula>TEXT(StudentAttributes__r.Affiliation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>University Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CareStatus__c</fullName>
        <label>CARE Status</label>
        <picklist>
            <picklistValues>
                <fullName>PROS – Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PRAP – Prospect Applied Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APNN – Application Incomplete PRAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APIN – Application Incomplete APCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APCO – Application Complete, Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC – Application Complete, Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REDI - Admission Decision Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEND - Additional Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAMT - Auto Admitted, Ready for Intake Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMT – Admitted, Ready for Intake Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTV – Fit and EWB Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLRD - Cleared to Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENRL – Enrolled and Assigned a Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEVR – Never completed EWOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DROP – Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMT - Not Admitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAYT - Not Admitted Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATR – Matriculated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRAD – Ready for Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALUMNI - Graduated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CollegeInterest__c</fullName>
        <description>the college that pertains to the program of interest.</description>
        <label>College of Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommitmentToSuccessReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commitment to Success Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommitmenttoSuccessReceivedDate__c</fullName>
        <label>Commitment to Success Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompletedIntake__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Intake</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletedTransferEvaluations__c</fullName>
        <description>Number of completed evaluations rolled up from the evaluation child object.</description>
        <inlineHelpText>The number of evaluations that have been complete</inlineHelpText>
        <label>Completed Transfer Evaluations</label>
        <summaryFilterItems>
            <field>TransferEvaluation__c.EvaluationStatus__c</field>
            <operation>equals</operation>
            <value>Sent, Not Eligible</value>
        </summaryFilterItems>
        <summaryForeignKey>TransferEvaluation__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ContactCountry__c</fullName>
        <formula>StudentContact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactCountry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <formula>Account.StudentContact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFullName__c</fullName>
        <formula>StudentContact__r.FirstName &amp;&quot; &quot;&amp;StudentContact__r.LastName</formula>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <formula>StudentContact__r.LastName</formula>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingCity__c</fullName>
        <formula>StudentContact__r.MailingCity</formula>
        <label>Contact Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingState__c</fullName>
        <formula>StudentContact__r.MailingState</formula>
        <label>Contact Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingStreet__c</fullName>
        <formula>StudentContact__r.MailingStreet</formula>
        <label>Contact Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingZip__c</fullName>
        <formula>StudentContact__r.MailingPostalCode</formula>
        <label>Contact Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <formula>StudentContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContinuingGradIndicator__c</fullName>
        <formula>IF( RecordType.Name = &apos;ContinuingGrad&apos;, IMAGE(&quot;servlet/servlet.FileDownload?file=015a00000038xqV&quot;, &apos;Continuing Grad&apos;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continuing Grad Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopyOfficeSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Student has a copy of an Office Suite</inlineHelpText>
        <label>Copy of an Office Suite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CounseledOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Counseled Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountofRNLicense__c</fullName>
        <description>Counts the number of received RN Licensures</description>
        <label>Count of RN License</label>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptInstitution__c</field>
            <operation>equals</operation>
            <value>001a000001FNQNf</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>StudentTranscript__c.TranscriptStatus__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </summaryFilterItems>
        <summaryForeignKey>StudentTranscript__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CourseExamples__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CBM / Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CourseOfStudy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Learning style</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>Formula field that copies the date and time from the Created Date to be able to export date and time value in reports.</description>
        <formula>CreatedDate</formula>
        <label>Created Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentAssignedCaller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current user that is assigned to this opportunity to make a outbound call to follow up or provide assistance to the potential student. If the call is complete this field will be returned to a unassigned value.</description>
        <inlineHelpText>The current user that is assigned to this opportunity to make a outbound call to follow up or provide assistance to the potential student. If the call is complete this field will be returned to a unassigned value.</inlineHelpText>
        <label>Current Assigned Caller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentEmployer__c</fullName>
        <formula>IF( StudentEmploymentHistory__r.Employer__r.Name = null,  StudentEmploymentHistory__r.OtherEmployer__c ,  StudentEmploymentHistory__r.Employer__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUser__c</fullName>
        <formula>$User.PIDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DatamarkLeadId__c</fullName>
        <label>Datamark Lead Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateIntakeCompleted__c</fullName>
        <label>Date Intake Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DegreeLevel__c</fullName>
        <formula>IF(CONTAINS(&apos;Bachelor&apos;, LEFT(MarketingProgram__r.ProgramTitle__c,8)), &apos;Undergrad&apos;, &apos;Graduate&apos;)</formula>
        <label>Degree Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelayedByCap__c</fullName>
        <description>This is to identify students who have been affected by forced enrollment caps and the month in which a cap affected their enrollment.</description>
        <inlineHelpText>This is to identify students who have been affected by forced enrollment caps and the month in which a cap affected their enrollment.</inlineHelpText>
        <label>Delayed by Cap</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Application Discount Amount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the discount has been applied ir not</description>
        <label>Discount Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountDocsReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User would mark this field checked if they have received the documents</description>
        <label>Discount Docs Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountDocsRequested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the discount documentation has been requested.</description>
        <label>Discount Docs Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountDoesNotQualify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that the student does not qualify for a discount.</description>
        <label>Discount Does Not Qualify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountForTransfer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the discount percentage</description>
        <inlineHelpText>This is the calculated discount percentage based on the school they have attended</inlineHelpText>
        <label>Discount For Transfer</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <description>This field will return the highest percentage value out of Employee discount and discount for transfer</description>
        <formula>MAX( DiscountForTransfer__c , EmployeeDiscountPercentage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DispositionValue__c</fullName>
        <formula>CASE ( LastCallDisposition__c,
&quot;Phone Attempt 1&quot;, 1,
&quot;Phone Attempt 2&quot;, 2,
&quot;Phone Attempt 3&quot;, 3,
&quot;Phone Attempt 4&quot;, 4,
&quot;Phone Attempt 5&quot;, 5,
&quot;Phone Attempt 6&quot;, 6,
&quot;Live Call-AR&quot;, 7,
&quot;Live Call- AR Live Transfer&quot;, 8,
&quot;Live Call- No Appt Set&quot;, 9,
&quot;Live Call- AR Set Appt&quot;, 10,
&quot;Need Follow Up AEC&quot;, 11,
&quot;Live Call- EC&quot;, 12,
&quot;Need Follow Up EC&quot;, 13,
&quot;EC Recommendation&quot;, 14,
&quot;No Follow Up- Not Interested&quot;, 15,
&quot;Bad Phone Number&quot;, 16,
 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DispositionValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DoNotSyncToBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Sync to Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECRank__c</fullName>
        <label>EC Rank</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Bad Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Unlikely to Succeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - OK, May Struggle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Should Succeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Future Graduate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ECRecommendation__c</fullName>
        <label>EC Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Recommend for Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Admit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EligibleTransferEvaluation__c</fullName>
        <label>Eligible Transfer Evaluation</label>
        <summaryFilterItems>
            <field>TransferEvaluation__c.EligibilityStatus__c</field>
            <operation>equals</operation>
            <value>Eligible</value>
        </summaryFilterItems>
        <summaryForeignKey>TransferEvaluation__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EligibletoWaiveRA__c</fullName>
        <formula>IF( ProgramCollege__c = &apos;IT&apos;, 
    IF( HasITCertorAssociates__c ,
       TRUE,
       FALSE
     ),
     IF( MarketingProgram__c = &apos;BSHI&apos;,
       FALSE,
       IF( (ProgramCollege__c = &apos;Business&apos; || ProgramCollege__c = &apos;Teachers&apos; || ProgramCollege__c = &apos;Teachers - Licensure&apos;) &amp;&amp; MaximumDegreeValue__c &gt; 10,
         TRUE,
         IF( ( MarketingProgram__c = &apos;BSNU&apos; || MarketingProgram__c = &apos;MSRNNULMUG&apos; || MarketingProgram__c = &apos;MSRNNUEDUG&apos; ) &amp;&amp; ProgramCollege__c = &apos;Health Professions&apos;, 
           TRUE,
           FALSE)
       )
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible to Waive RA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailAboutURL__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;/about_WGU/overview&quot;, 
&quot;WGU-IN&quot;, &quot;/about_WGU_indiana/overview&quot;, 
&quot;WGU-TX&quot;, &quot;/about_wgu_texas/overview&quot;, 
&quot;WGU-WA&quot;, &quot;/about_WGU_washington/overview&quot;, 
&quot;WGU-MO&quot;, &quot;/about_wgu_missouri/overview&quot;, 
&quot;WGU-TN&quot;, &quot;/about_wgu_tennessee/overview&quot;, 
&quot;/about_WGU/overview&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailAboutURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAccreditationUrl__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;/about_WGU/accreditation&quot;, 
&quot;WGU-IN&quot;, &quot;/about_WGU_indiana/accreditation&quot;, 
&quot;WGU-TX&quot;, &quot;/about_WGU_texas/accreditation&quot;, 
&quot;WGU-WA&quot;, &quot;/about_WGU_washington/accreditation&quot;, 
&quot;WGU-MO&quot;, &quot;/about_WGU_missouri/accreditation&quot;, 
&quot;WGU-TN&quot;, &quot;/about_WGU_tennessee/accreditation&quot;, 
&quot;/about_WGU/accreditation&quot;)</formula>
        <label>EmailAccreditationUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailApplicationUrl__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;https://www.wgu.edu/wgu/app/app_step0&quot;, 
&quot;WGU-IN&quot;, &quot;https://indiana.wgu.edu/wgu/app/app_step0&quot;, 
&quot;WGU-TX&quot;, &quot;https://texas.wgu.edu/wgu/app/app_step0&quot;, 
&quot;WGU-WA&quot;, &quot;https://washington.wgu.edu/wgu/app/app_step0&quot;, 
&quot;WGU-MO&quot;, &quot;https://missouri.wgu.edu/wgu/app/app_step0&quot;, 
&quot;WGU-TN&quot;, &quot;https://tennessee.wgu.edu/wgu/app/app_step0&quot;, 
&quot;https://www.wgu.edu/wgu/app/app_step0&quot;)</formula>
        <label>EmailApplicationUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailBlog__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;http://www.wgu.edu/blog&quot;, 
&quot;WGU-IN&quot;, &quot;http://indiana.wgu.edu/blog&quot;, 
&quot;WGU-TX&quot;, &quot;http://texas.wgu.edu/blog&quot;, 
&quot;WGU-WA&quot;, &quot;http://washington.wgu.edu/blog&quot;, 
&quot;WGU-MO&quot;, &quot;http://missouri.wgu.edu/blog&quot;, 
&quot;WGU-TN&quot;, &quot;http://tennessee.wgu.edu/blog&quot;, 
&quot;http://www.wgu.edu/blog&quot;)</formula>
        <label>EmailBlog</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCampusCityStateZip__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;Salt Lake City, UT 84107&quot;, 
&quot;WGU-IN&quot;, &quot;Indianapolis, IN 46204&quot;, 
&quot;WGU-TX&quot;, &quot;Austin, TX 78701&quot;, 
&quot;WGU-WA&quot;, &quot;Seattle, WA 98154&quot;, 
&quot;WGU-MO&quot;, &quot;Salt Lake City, UT 84107&quot;, 
&quot;WGU-TN&quot;, &quot;Salt Lake City, UT 84107&quot;, 
&quot;Salt Lake City, UT 84107&quot;)</formula>
        <label>EmailCampusCityStateZip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCampusFull__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;Western Governors University&quot;, 
&quot;WGU-IN&quot;, &quot;WGU Indiana&quot;, 
&quot;WGU-TX&quot;, &quot;WGU Texas&quot;, 
&quot;WGU-WA&quot;, &quot;WGU Washington&quot;, 
&quot;WGU-MO&quot;, &quot;WGU Missouri&quot;, 
&quot;WGU-TN&quot;, &quot;WGU Tennessee&quot;, 
&quot;Western Governors University&quot;)</formula>
        <label>EmailCampusFull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCampusShort__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;WGU&quot;, 
&quot;WGU-IN&quot;, &quot;WGU Indiana&quot;, 
&quot;WGU-TX&quot;, &quot;WGU Texas&quot;, 
&quot;WGU-WA&quot;, &quot;WGU Washington&quot;, 
&quot;WGU-MO&quot;, &quot;WGU Missouri&quot;, 
&quot;WGU-TN&quot;, &quot;WGU Tennessee&quot;, 
&quot;WGU&quot;)</formula>
        <label>EmailCampusShort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCampusStreet__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;4001 S. 700 E; STE 700&quot;, 
&quot;WGU-IN&quot;, &quot;10 W Market Street&quot;, 
&quot;WGU-TX&quot;, &quot;221 W 6th Street; STE 1050&quot;, 
&quot;WGU-WA&quot;, &quot;1001 Fourth Avenue; STE 3827&quot;, 
&quot;WGU-MO&quot;, &quot;4001 S. 700 E; STE 700&quot;, 
&quot;WGU-TN&quot;, &quot;4001 S. 700 E; STE 700&quot;, 
&quot;4001 S. 700 E.; STE 700&quot;)</formula>
        <label>EmailCampusStreet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCampusUrl__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;www.wgu.edu&quot;, 
&quot;WGU-IN&quot;, &quot;indiana.wgu.edu&quot;, 
&quot;WGU-TX&quot;, &quot;texas.wgu.edu&quot;, 
&quot;WGU-WA&quot;, &quot;washington.wgu.edu&quot;, 
&quot;WGU-MO&quot;, &quot;missouri.wgu.edu&quot;, 
&quot;WGU-TN&quot;, &quot;tennessee.wgu.edu&quot;, 
&quot;www.wgu.edu&quot;)</formula>
        <label>EmailCampusUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCorporateUrl__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;/tuition_financial_aid/corporate&quot;, 
&quot;WGU-IN&quot;, &quot;/tuition_financial_aid/corporate&quot;, 
&quot;WGU-TX&quot;, &quot;/tuition_financial_aid/corporate&quot;, 
&quot;WGU-WA&quot;, &quot;/tuition_financial_aid/corporate&quot;, 
&quot;/tuition_financial_aid/corporate&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailCorporateUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailFacebook__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;http://www.facebook.com/wgu.edu&quot;, 
&quot;WGU-IN&quot;, &quot;http://www.facebook.com/WGUIndiana&quot;, 
&quot;WGU-TX&quot;, &quot;https://www.facebook.com/WGUTexas&quot;, 
&quot;WGU-WA&quot;, &quot;https://www.facebook.com/wguwashington&quot;, 
&quot;WGU-MO&quot;, &quot;https://www.facebook.com/WGUMissouri&quot;, 
&quot;WGU-TN&quot;, &quot;https://www.facebook.com/WGUTennessee&quot;, 
&quot;http://www.facebook.com/wgu.edu&quot;)</formula>
        <label>EmailFacebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailFinAidUrl__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;/tuition_financial_aid/financial_aid&quot;, 
&quot;WGU-IN&quot;, &quot;/tuition_financial_aid/financial_aid&quot;, 
&quot;WGU-TX&quot;, &quot;/tuition_financial_aid/financial_aid&quot;, 
&quot;WGU-WA&quot;, &quot;/tuition_financial_aid/financial_aid&quot;, 
&quot;/tuition_financial_aid/financial_aid&quot;)</formula>
        <label>EmailFinAidUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailGetConnectedSocial__c</fullName>
        <formula>CASE(Campus__c, 
&quot;WGU&quot;, &quot;www.wgu.edu/get-connected&quot;, 
&quot;WGU-IN&quot;, &quot;indiana.wgu.edu/about_WGU_indiana/get_connected&quot;, 
&quot;WGU-TX&quot;, &quot;www.wgu.edu/get-connected&quot;, 
&quot;WGU-WA&quot;, &quot;washington.wgu.edu/get-connected&quot;, 
&quot;www.wgu.edu/get-connected&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailGetConnectedSocial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailId__c</fullName>
        <label>EmailId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>